--- a/package.json
+++ b/package.json
@@ -6,16 +6,14 @@
   "scripts": {
     "server": "node ./server/server.js",
     "start": "webpack-dev-server --mode development --open",
-    "dev": "webpack --mode development",
+    "dev": "webpack --mode development  --open",
     "build": "webpack --mode production --module-bind js=babel-loader"
   },
   "author": "rebecca.gray@gmail.com",
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.0.0",
-    "express": "^4.16.3",
     "http": "0.0.0",
-    "path": "^0.12.7",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3",
     "underscore": "^1.8.3"
